tests/src/Loader/classloader/generics/Instantiation/Negative/Type_ofT_Inherit_FromT.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
  <PropertyGroup>
    <AssemblyName>Type_ofT_Inherit_FromT</AssemblyName>
    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
    <OutputType>Exe</OutputType>
    <CLRTestKind>BuildAndRun</CLRTestKind>
    <CLRTestPriority>1</CLRTestPriority>
  </PropertyGroup>
  <ItemGroup />
  <ItemGroup>
    <Compile Include="Type_ofT_Inherit_FromT.il" />
  </ItemGroup>
  <ItemGroup />
  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
</Project>